[package]
name = "dct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clio = "0.3.4"
polars = { version = "0.33.2", features = ["parquet", "decompress"] }
